# ChangeLog for x11-terms/gnome-terminal
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/gnome-terminal/ChangeLog,v 1.166 2008/04/07 21:24:50 eva Exp $

*gnome-terminal-2.22.1 (07 Apr 2008)

  07 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-terminal-2.22.1.ebuild:
  bump to 2.22.1, fix a few bugs.

*gnome-terminal-2.22.0 (22 Mar 2008)

  22 Mar 2008; Mart Raudsepp <leio@gentoo.org>
  +files/gnome-terminal-2.22.0-default_shell.patch,
  +files/gnome-terminal-2.22.0-fix-detach-tab.patch,
  +gnome-terminal-2.22.0.ebuild:
  New version for GNOME 2.22. Uses GtkNotebook provided reordable tabs for
  better effects and no code duplication, GOption instead of popt, many bug
  fixes and more. Also honors the desktop cursor blink setting, disabling of
  which in keyboard preferences is good for your laptops battery if you have
  one.

  14 Mar 2008; Mart Raudsepp <leio@gentoo.org> gnome-terminal-2.18.2.ebuild,
  gnome-terminal-2.18.4.ebuild:
  Be compatible with glib-2.16 and in general more future proof, bug 213340

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> gnome-terminal-2.18.4.ebuild:
  Stable for HPPA (bug #208366).

  03 Feb 2008; Raúl Porcel <armin76@gentoo.org>
  gnome-terminal-2.18.4.ebuild:
  alpha/ia64/sparc stable wrt #208366

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  gnome-terminal-2.18.4.ebuild:
  Stable on amd64 wrt bug #208366.

  01 Feb 2008; Brent Baude <ranger@gentoo.org> gnome-terminal-2.18.4.ebuild:
  Marking gnome-terminal-2.18.4 ppc64 and ppc stable for bug 208366

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  gnome-terminal-2.18.4.ebuild:
  stable x86, bug 208366

  09 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gnome-terminal-2.15-tab-switching-no-resize.patch,
  -gnome-terminal-2.16.1.ebuild, -gnome-terminal-2.18.1.ebuild:
  cleanup old revisions

*gnome-terminal-2.18.4 (09 Jan 2008)
